dartagnan/src/test/resources/parsers/program/spirv/invalid/memory-operands/missing-scope-2.spv.dis
; SPIR-V
; Version: 1.0
; Schema: 0
               OpCapability Shader
               OpCapability VulkanMemoryModel
               OpMemoryModel Logical Vulkan
               OpEntryPoint GLCompute %main "main"
       %void = OpTypeVoid
       %uint = OpTypeInt 32 0
   %ptr_uint = OpTypePointer Uniform %uint
       %func = OpTypeFunction %void
     %uint_1 = OpConstant %uint 1
        %var = OpVariable %ptr_uint Uniform
       %main = OpFunction %void None %func
      %label = OpLabel
               OpStore %var %uint_1 MakePointerAvailable|NonPrivatePointer
     %result = OpLoad %uint %var MakePointerVisible|NonPrivatePointer
               OpReturn
               OpFunctionEnd
